--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div>
                 <h1>This website is under construction</h1>
                 <p class="checkBack">Please check back later</p>
-                <p class="bottomText">This website is developed by @actuallyaridan on X (formerly Twitter).<br>You are allowed to copy the soruce code of this website.</p>
+                <p class="bottomText">This website is developed by @actuallyaridan on X (formerly Twitter).<br>You are allowed to copy the source code of this website.</p>
             </div>
         </div>
     </div>
