Rarranged files and added local fonts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost&display=swap">
     <meta name="theme-color" content="#F5F5F5" />
     <title>Under Construction — aridan</title>
-    <link href="styles/styles.css" rel="stylesheet">
+    <link href="src/styles/styles.css" rel="stylesheet">
 </head>
 
 <body class="boxAlignment gradientBackgroundAnimation">
