Added a language switcher and Twitters emoji set

--- a/sv/index.html
+++ b/sv/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost&display=swap">
     <meta name="theme-color" content="#F5F5F5" />
-    <title>Under Construction — aridan</title>
-    <link href="src/styles/styles.css" rel="stylesheet">
-    <script src="src/scripts/dropDownMenu.js"></script>
+    <title>Under konstruktion — aridan</title>
+    <link href="../src/styles/styles.css" rel="stylesheet">
+    <script src="../src/scripts/dropDownMenu.js"></script>
     <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
-    <script src="src/scripts/twimojiFix.js"></script>
+    <script src="../src/scripts/twimojiFix.js"></script>
 </head>
 
 <body class="boxAlignment gradientBackgroundAnimation">
@@ -18,10 +18,10 @@
         <nav>
             <div class="langWrapper">
                 <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang">🌐 Language</button>
+                    <button onclick="toggleLangDrop()" class="dropButton lang">🌐 Språk (Language)</button>
                     <div id="langDrop" class="dropdownContent">
-                        <a href="index.html">🇺🇸 American English</a>
-                        <a href="sv/index.html">🇸🇪 Svenska (Swedish)</a>
+                        <a href="sv/index.html">🇸🇪 Svenska</a>
+                        <a href="../index.html">🇺🇸 American English (Amerikansk Engelska)</a>
                     </div>
                   </div>
             </div>
@@ -31,9 +31,9 @@
         <div class="containerCenterer">
             <div class="constructionBox">
                 <div>
-                    <h1>This website is under construction</h1>
-                    <p class="checkBack">Please check back later</p>
-                    <p class="bottomText">This website is developed by @actuallyaridan on X (formerly Twitter).<br>You are allowed to copy the source code of this website.</p>
+                    <h1>Den här webbsidan är under konstruktion</h1>
+                    <p class="checkBack">Kom tillbaka senare</p>
+                    <p class="bottomText">Den här webbsidan utvecklas av @actuallyaridan på X (tidigare Twitter).<br>Du kan kopiera denna sidas källkod.</p>
                 </div>
             </div>
         </div>
