Fixed an issue with the language switcher

--- a/sv/index.html
+++ b/sv/index.html
@@ -20,7 +20,7 @@
                 <div class="dropdown">
                     <button onclick="toggleLangDrop()" class="dropButton lang">🌐 Språk (Language)</button>
                     <div id="langDrop" class="dropdownContent">
-                        <a href="sv/index.html">🇸🇪 Svenska</a>
+                        <a href="index.html">🇸🇪 Svenska</a>
                         <a href="../index.html">🇺🇸 American English (Amerikansk Engelska)</a>
                     </div>
                   </div>
