--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <script src="src/scripts/dropDownMenu.js"></script>
     <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <script src="src/scripts/twimojiFix.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/favicons/favicon-16x16.png">
+    <link rel="manifest" href="src/favicons/site.webmanifest">
 </head>
 
 <body class="boxAlignment gradientBackgroundAnimation">
@@ -23,7 +27,7 @@
                         <a href="index.html">🇺🇸 American English</a>
                         <a href="sv/index.html">🇸🇪 Svenska (Swedish)</a>
                     </div>
-                  </div>
+                </div>
             </div>
         </nav>
     </header>
@@ -33,7 +37,8 @@
                 <div>
                     <h1>This website is under construction</h1>
                     <p class="checkBack">Please check back later</p>
-                    <p class="bottomText">This website is developed by @actuallyaridan on X (formerly Twitter).<br>You are allowed to copy the source code of this website.</p>
+                    <p class="bottomText">This website is developed by @actuallyaridan on X (formerly Twitter).<br>You
+                        are allowed to copy the source code of this website.</p>
                 </div>
             </div>
         </div>
