--- a/sv/index.html
+++ b/sv/index.html
@@ -11,6 +11,10 @@
     <script src="../src/scripts/dropDownMenu.js"></script>
     <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <script src="../src/scripts/twimojiFix.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/favicons/favicon-16x16.png">
+    <link rel="manifest" href="src/favicons/site.webmanifest">
 </head>
 
 <body class="boxAlignment gradientBackgroundAnimation">
@@ -23,7 +27,7 @@
                         <a href="index.html">🇸🇪 Svenska</a>
                         <a href="../index.html">🇺🇸 American English (Amerikansk Engelska)</a>
                     </div>
-                  </div>
+                </div>
             </div>
         </nav>
     </header>
@@ -33,7 +37,8 @@
                 <div>
                     <h1>Den här webbsidan är under konstruktion</h1>
                     <p class="checkBack">Kom tillbaka senare</p>
-                    <p class="bottomText">Den här webbsidan utvecklas av @actuallyaridan på X (tidigare Twitter).<br>Du kan kopiera denna sidas källkod.</p>
+                    <p class="bottomText">Den här webbsidan utvecklas av @actuallyaridan på X (tidigare Twitter).<br>Du
+                        kan kopiera denna sidas källkod.</p>
                 </div>
             </div>
         </div>
