--- a/sv/index.html
+++ b/sv/index.html
@@ -14,7 +14,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="../src/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../src/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../src/favicons/favicon-16x16.png">
-    <link rel="manifest" href="..src/favicons/site.webmanifest">
+    <link rel="manifest" href="../src/favicons/site.webmanifest">
 </head>
 
 <body class="boxAlignment gradientBackgroundAnimation">
