--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <script src="https://unpkg.com/twemoji@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <script src="src/scripts/twimojiFix.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="src/favicons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="32x32" href="/src/favicons/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="16x16" href="/src/favicons/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="src/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="src/favicons/favicon-16x16.png">
     <link rel="mask-icon" sizes="32x32" href="src/favicons/favicon-32x32.png" >
     <link rel="mask-icon" sizes="16x16" href="src/favicons/favicon-16x16.png" >
+    <link rel="shortcut icon" sizes="16x16" href="src/favicons/favicon-16x16.png">
     <link rel="manifest" href="src/favicons/site.webmanifest">
 </head>
 
