Fixed dumb scrolling

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav>
             <div class="langWrapper">
                 <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang">🌐 Language</button>
+                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Language</button>
                     <div id="langDrop" class="dropdownContent">
                         <a href="index.html">🇺🇸 American English</a>
                         <a href="sv/index.html">🇸🇪 Svenska (Swedish)</a>
