--- a/sv/index.html
+++ b/sv/index.html
@@ -22,7 +22,7 @@
         <nav>
             <div class="langWrapper">
                 <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang">🌐 Språk (Language)</button>
+                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Språk (Language)</button>
                     <div id="langDrop" class="dropdownContent">
                         <a href="index.html">🇸🇪 Svenska</a>
                         <a href="../index.html">🇺🇸 American English (Amerikansk Engelska)</a>
