--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                     </div>
                 </div>
             </div>
+            <div class="navWrapper">
+                <a class="navButton" href="index.html">🏠 Home</a>
+                <a class="navButton" href="socialmedia.html">💬 Social Media</a>
+                <a class="navButton" href="experiences.html">🧠 Experiences</a>
+                <a class="navButton" href="projects.html">🛠️ Projects</a>
+            </div>
         </nav>
     </header>
     <main>
@@ -36,9 +42,9 @@
             <div class="constructionBox">
                 <div>
                     <h1>This website is under construction</h1>
-                    <p class="checkBack">Please check back later</p>
-                    <p class="bottomText">This website is developed by @actuallyaridan on X (formerly Twitter).<br>You
-                        are allowed to copy the source code of this website.</p>
+                    <p class="checkBack">Please chcek back later.</p>
+                    <p class="bottomText">This website follows general guidelines for an accelible internet.<br>You
+                        are allowed to copy the source code of this website. You can find it at <a href="https://github.com/actuallyaridan/aridan.net/">GitHub</a></p>
                 </div>
             </div>
         </div>
