Fixed typos and created pages

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#710a97" />
-    <title>Home — actuallyaridan</title>
+    <title>Projects — actuallyaridan</title>
     <link href="src/styles/styles.css" rel="stylesheet">
     <script src="src/scripts/dropDownMenu.js"></script>
     <script src="src/scripts/twimojiFix.js"></script>
@@ -41,8 +41,8 @@
         <div class="containerCenterer">
             <div class="constructionBox">
                 <div>
-                    <h1>Home</h1>
-                    <p class="checkBack">Please check back later.</p>
+                    <h1>Projects</h1>
+                    <p class="checkBack">Please chcek back later.</p>
                     <p class="bottomText">This website follows general guidelines for an accelible internet.<br>You
                         are allowed to copy the source code of this website. You can find it at <a href="https://github.com/actuallyaridan/aridan.net/">GitHub</a></p>
                 </div>
