--- a/sv/socialmedia.html
+++ b/sv/socialmedia.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#710a97" />
-    <title>Under konstruktion — actuallyaridan</title>
+    <title>Sociala Medier — actuallyaridan</title>
     <link href="../src/styles/styles.css" rel="stylesheet">
     <script src="../src/scripts/dropDownMenu.js"></script>
     <script src="../src/scripts/twimojiFix.js"></script>
@@ -29,7 +29,7 @@
             </div>
             <div class="navWrapper">
                 <a class="navButton" href="index.html">🏠 Hem</a>
-                <a class="navButton" href="socialmedia.html">💬 Sociala medier</a>
+                <a class="navButton" href="socialmedia.html">💬 Sociala Medier</a>
                 <a class="navButton" href="experiences.html">🧠 Erfarenhet</a>
                 <a class="navButton" href="projects.html">🛠️ Projekt</a>
             </div>
@@ -39,7 +39,7 @@
         <div class="containerCenterer">
             <div class="constructionBox">
                 <div>
-                    <h1>Hem</h1>
+                    <h1>Sociala Medier</h1>
                     <p class="checkBack">Kom tillbaka senare</p>
                     <p class="bottomText">Den här webbsidan utvecklas av @actuallyaridan på X (tidigare Twitter).<br>Du
                         kan kopiera denna sidas källkod.</p>
