Fixed more typos

--- a/socialmedia.html
+++ b/socialmedia.html
@@ -43,7 +43,7 @@
                 <div>
                     <h1>Social Media</h1>
                     <p class="checkBack">Please chcek back later.</p>
-                    <p class="bottomText">This website follows general guidelines for an accelible internet.<br>You
+                    <p class="bottomText">This website follows general guidelines for an accessible internet.<br>You
                         are allowed to copy the source code of this website. You can find it at <a href="https://github.com/actuallyaridan/aridan.net/">GitHub</a></p>
                 </div>
             </div>
