--- a/experiences.html
+++ b/experiences.html
@@ -32,7 +32,7 @@
             <div class="navWrapper">
                 <a class="navButton" href="index.html">🏠 Home</a>
                 <a class="navButton" href="socialmedia.html">💬 Social Media</a>
-                <a class="navButton" href="experiences.html">🧠 Experiences</a>
+                <a class="navButton activeChoice" href="experiences.html">🧠 Experiences</a>
                 <a class="navButton" href="projects.html">🛠️ Projects</a>
             </div>
         </nav>
