--- a/sv/index.html
+++ b/sv/index.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="navWrapper">
-                <a class="navButton" href="index.html">🏠 Hem</a>
+                <a class="navButto activeChoice" href="index.html">🏠 Hem</a>
                 <a class="navButton" href="socialmedia.html">💬 Sociala medier</a>
                 <a class="navButton" href="experiences.html">🧠 Erfarenhet</a>
                 <a class="navButton" href="projects.html">🛠️ Projekt</a>
