--- a/sv/projects.html
+++ b/sv/projects.html
@@ -31,7 +31,7 @@
                 <a class="navButton" href="index.html">🏠 Hem</a>
                 <a class="navButton" href="socialmedia.html">💬 Sociala medier</a>
                 <a class="navButton" href="experiences.html">🧠 Erfarenhet</a>
-                <a class="navButton" href="projects.html">🛠️ Projekt</a>
+                <a class="navButton activeChoice" href="projects.html">🛠️ Projekt</a>
             </div>
         </nav>
     </header>
