--- a/sv/socialmedia.html
+++ b/sv/socialmedia.html
@@ -29,7 +29,7 @@
             </div>
             <div class="navWrapper">
                 <a class="navButton" href="index.html">🏠 Hem</a>
-                <a class="navButton" href="socialmedia.html">💬 Sociala Medier</a>
+                <a class="navButton activeChoice" href="socialmedia.html">💬 Sociala Medier</a>
                 <a class="navButton" href="experiences.html">🧠 Erfarenhet</a>
                 <a class="navButton" href="projects.html">🛠️ Projekt</a>
             </div>
