--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="navWrapper">
-                <a class="navButton" href="index.html">🏠 Home</a>
+                <a class="navButton activeChoice" href="index.html">🏠 Home</a>
                 <a class="navButton" href="socialmedia.html">💬 Social Media</a>
                 <a class="navButton" href="experiences.html">🧠 Experiences</a>
                 <a class="navButton" href="projects.html">🛠️ Projects</a>
