--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
                 <a class="navButton" href="index.html">🏠 Home</a>
                 <a class="navButton" href="socialmedia.html">💬 Social Media</a>
                 <a class="navButton" href="experiences.html">🧠 Experiences</a>
-                <a class="navButton" href="projects.html">🛠️ Projects</a>
+                <a class="navButton activeChoice" href="projects.html">🛠️ Projects</a>
             </div>
         </nav>
     </header>
