--- a/socialmedia.html
+++ b/socialmedia.html
@@ -31,7 +31,7 @@
             </div>
             <div class="navWrapper">
                 <a class="navButton" href="index.html">🏠 Home</a>
-                <a class="navButton" href="socialmedia.html">💬 Social Media</a>
+                <a class="navButton activeChoice" href="socialmedia.html">💬 Social Media</a>
                 <a class="navButton" href="experiences.html">🧠 Experiences</a>
                 <a class="navButton" href="projects.html">🛠️ Projects</a>
             </div>
