--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -30,7 +30,7 @@
             <div class="navWrapper">
                 <a class="navButton" href="index.html">🏠 Hem</a>
                 <a class="navButton" href="socialmedia.html">💬 Sociala medier</a>
-                <a class="navButton" href="experiences.html">🧠 Erfarenhet</a>
+                <a class="navButton activeChoice" href="experiences.html">🧠 Erfarenhet</a>
                 <a class="navButton" href="projects.html">🛠️ Projekt</a>
             </div>
         </nav>
