Major content added and bug fixed
Fixed a bug where the animation would repeat multiple times for no reason

Added content to the projects page

--- a/experiences.html
+++ b/experiences.html
@@ -42,7 +42,7 @@
             <div class="constructionBox">
                 <div>
                     <h1>Experiences</h1>
-                    <p class="checkBack">Please chcek back later.</p>
+                    <p class="checkBack">Please check back later.</p>
                     <p class="bottomText">This website follows general guidelines for an accessible internet.<br>You
                         are allowed to copy the source code of this website. You can find it at <a href="https://github.com/actuallyaridan/aridan.net/">GitHub</a></p>
                 </div>
