--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
     <link rel="manifest" href="src/favicons/site.webmanifest">
 </head>
 
-<body class="boxAlignment gradientBackgroundAnimation">
+<body class="gradientBackgroundAnimation">
     <header>
         <nav>
             <div class="langWrapper">
@@ -42,9 +42,52 @@
             <div class="constructionBox">
                 <div>
                     <h1>Projects</h1>
-                    <p class="checkBack">Please check back later.</p>
-                    <p class="bottomText">This website follows general guidelines for an accessible internet.<br>You
-                        are allowed to copy the source code of this website. You can find it at <a href="https://github.com/actuallyaridan/aridan.net/">GitHub</a></p>
+                    <div>
+                        <p class="subTitle">I have a bunch of projects that I work on now and then. <br>Some of them are technical projects and some others have to do with software and/or websites. <br>Why don't you check them out? I'm sure you'll like them! I had fun making them at least! 😊</p>
+                        <div class="project">
+                            <p class="projectName">This website (aridan.net)</p>
+                            <p class="projectDesc">This is a website that has all my social media links, all my experiences and similar listed. <br>I learned a lot during this project, mainly how to make websites look nice.</p>
+                            <div>
+                                <p class="projectStatus WIP">Work in process</p>
+                                <p class="projectLink">🔗 aridan.net</p>
+                                <p class="projectGitHub">🔗 <a href="https://github.com/actuallyaridan/aridan.net">GitHub</a></p>
+                                <p class="projectLearned">🧑‍🏫 HTML, CSS, JavaScript</p>
+                                <p class="projectLegal">🧑‍⚖️ Unlicensed</p>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <p class="projectName">iPod Video 5th Gen</p>
+                            <p class="projectDesc">I have modified this iPod with a transparent click wheel and button along with a transparent faceplate. <br>I've also installed a larger battery and replaced its hard drive with a microSD card.</p>
+                            <div>
+                                <p class="projectStatus WIP">Work in process</p>
+                                <p class="projectLearned">🧑‍🏫 Electronics modification</p>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <p class="projectName">iPod Click Wheel 4th Gen</p>
+                            <p class="projectDesc">I have repaired this iPod by replacing its click wheel. <br>I've also upgraded it by replacing its hard drive with a Compact Flash card and I installed a new battery too.</p>
+                            <div>
+                                <p class="projectStatus WIP">Work in process</p>
+                                <p class="projectLearned">🧑‍🏫 Electronics modification</p>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <p class="projectName">iPod Mini 2nd Gen </p>
+                            <p class="projectDesc">I've also upgraded this iPod by replacing its hard drive with a Compact Flash card and I installed a new battery too.</p>
+                            <div>
+                                <p class="projectStatus completed">Completed</p>
+                                <p class="projectLearned">🧑‍🏫 Electronics modification</p>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <p class="projectName">Hackintoshing a PC</p>
+                            <p class="projectDesc">Hackintoshing is the act of installing macOS on non-Apple hardware. <br>I did this as a hobby project and I learned a lot about Apple software. It was a fun project and it still works to this day!</p>
+                            <div>
+                                <p class="projectStatus completed">Completed</p>
+                                <p class="projectLearned">🧑‍🏫 Software</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
