Testing mobile menu

--- a/experiences.html
+++ b/experiences.html
@@ -35,6 +35,9 @@
                 <a class="navButton activeChoice" href="experiences.html">🧠 Experiences</a>
                 <a class="navButton" href="projects.html">🛠️ Projects</a>
             </div>
+            <div class="navWrapperMobile">
+                <a class="navButton" href="projects.html">🛠️ Projekt</a>
+            </div>
         </nav>
     </header>
     <main>
