--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -33,6 +33,9 @@
                 <a class="navButton activeChoice" href="experiences.html">🧠 Erfarenhet</a>
                 <a class="navButton" href="projects.html">🛠️ Projekt</a>
             </div>
+            <div class="navWrapperMobile">
+                <a class="navButton" href="projects.html">🛠️ Projekt</a>
+            </div>
         </nav>
     </header>
     <main>
