--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,7 @@
     <title>Projects — actuallyaridan</title>
     <link href="src/styles/styles.css" rel="stylesheet">
     <script src="src/scripts/dropDownMenu.js"></script>
+    <script src="src/scripts/mobileMenu.js"></script>
     <script src="src/scripts/twimojiFix.js"></script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="/src/favicons/favicon-32x32.png">
@@ -17,7 +18,7 @@
     <link rel="manifest" href="src/favicons/site.webmanifest">
 </head>
 
-<body class="gradientBackgroundAnimation">
+<body class="boxAlignment gradientBackgroundAnimation">
     <header>
         <nav>
             <div class="langWrapper">
@@ -30,6 +31,15 @@
                 </div>
             </div>
             <div class="navWrapper">
+                <a class="navButton" href="index.html">🏠 Home</a>
+                <a class="navButton" href="socialmedia.html">💬 Social Media</a>
+                <a class="navButton" href="experiences.html">🧠 Experiences</a>
+                <a class="navButton activeChoice" href="projects.html">🛠️ Projects</a>
+            </div>
+            <div class="navWrapperMobile">
+                <button onclick="toggleMenu()" class="navButton" >＝ Menu</a>
+            </div>
+            <div class="mobileMenu" id="mobileMenuID">
                 <a class="navButton" href="index.html">🏠 Home</a>
                 <a class="navButton" href="socialmedia.html">💬 Social Media</a>
                 <a class="navButton" href="experiences.html">🧠 Experiences</a>
@@ -49,8 +59,8 @@
                             <p class="projectDesc">This is a website that has all my social media links, all my experiences and similar listed. <br>I learned a lot during this project, mainly how to make websites look nice.</p>
                             <div>
                                 <p class="projectStatus WIP">Work in process</p>
-                                <p class="projectLink">🔗 aridan.net</p>
-                                <p class="projectGitHub">🔗 <a href="https://github.com/actuallyaridan/aridan.net">GitHub</a></p>
+                                <p class="projectLink">🔗 <a href="https://aridan.net">aridan.net</a></p>
+                                <p class="projectLink">🔗 <a href="https://github.com/actuallyaridan/aridan.net">GitHub</a></p>
                                 <p class="projectLearned">🧑‍🏫 HTML, CSS, JavaScript</p>
                                 <p class="projectLegal">🧑‍⚖️ Unlicensed</p>
                             </div>
