--- a/sv/index.html
+++ b/sv/index.html
@@ -28,9 +28,12 @@
                 </div>
             </div>
             <div class="navWrapper">
-                <a class="navButto activeChoice" href="index.html">🏠 Hem</a>
+                <a class="navButton activeChoice" href="index.html">🏠 Hem</a>
                 <a class="navButton" href="socialmedia.html">💬 Sociala medier</a>
                 <a class="navButton" href="experiences.html">🧠 Erfarenhet</a>
+                <a class="navButton" href="projects.html">🛠️ Projekt</a>
+            </div>
+            <div class="navWrapperMobile">
                 <a class="navButton" href="projects.html">🛠️ Projekt</a>
             </div>
         </nav>
