Added the mobile menu to all pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Home — actuallyaridan</title>
     <link href="src/styles/styles.css" rel="stylesheet">
     <script src="src/scripts/dropDownMenu.js"></script>
+    <script src="src/scripts/mobileMenu.js"></script>
     <script src="src/scripts/twimojiFix.js"></script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="/src/favicons/favicon-32x32.png">
@@ -35,9 +36,16 @@
                 <a class="navButton" href="experiences.html">🧠 Experiences</a>
                 <a class="navButton" href="projects.html">🛠️ Projects</a>
             </div>
-            <div class="navWrapperMobile">
-                <a class="navButton" href="projects.html">🛠️ Projekt</a>
-            </div>
+        </div>
+        <div class="navWrapperMobile">
+            <button onclick="toggleMenu()" class="navButton" >＝ Menu</a>
+        </div>
+        <div class="mobileMenu" id="mobileMenuID">
+            <a class="navButton activeChoice" href="index.html">🏠 Home</a>
+            <a class="navButton" href="socialmedia.html">💬 Social Media</a>
+            <a class="navButton" href="experiences.html">🧠 Experiences</a>
+            <a class="navButton" href="projects.html">🛠️ Projects</a>
+        </div>
         </nav>
     </header>
     <main>
