--- a/sv/index.html
+++ b/sv/index.html
@@ -21,7 +21,8 @@
         <nav>
             <div class="langWrapper">
                 <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Språk (Language)</button>
+                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Språk
+                        (Language)</button>
                     <div id="langDrop" class="dropdownContent">
                         <a href="index.html">🇸🇪 Svenska</a>
                         <a href="../index.html">🇺🇸 American English (Amerikansk Engelska)</a>
@@ -36,7 +37,7 @@
             </div>
             <div class="navWrapperMobile">
                 <div class="navWrapperMobile">
-                    <button onclick="toggleMenu()" class="navButton" >＝ Meny</a>
+                    <button onclick="toggleMenu()" class="navButton">＝ Meny</a>
                 </div>
                 <div class="mobileMenu" id="mobileMenuID">
                     <a class="navButton activeChoice" href="index.html">🏠 Hem</a>
@@ -44,6 +45,7 @@
                     <a class="navButton" href="experiences.html">🧠 Erfarenhet</a>
                     <a class="navButton" href="projects.html">🛠️ Projekt</a>
                 </div>
+            </div>
         </nav>
     </header>
     <main>
