--- a/experiences.html
+++ b/experiences.html
@@ -25,8 +25,8 @@
                 <div class="dropdown">
                     <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Language</button>
                     <div id="langDrop" class="dropdownContent">
-                        <a href="index.html">🇺🇸 American English</a>
-                        <a href="sv/index.html">🇸🇪 Svenska (Swedish)</a>
+                        <a href="experiences.html">🇺🇸 American English</a>
+                        <a href="sv/experiences.html">🇸🇪 Svenska (Swedish)</a>
                     </div>
                 </div>
             </div>
