--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -23,8 +23,8 @@
                 <div class="dropdown">
                     <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Språk (Language)</button>
                     <div id="langDrop" class="dropdownContent">
-                        <a href="index.html">🇸🇪 Svenska</a>
-                        <a href="../index.html">🇺🇸 American English (Amerikansk Engelska)</a>
+                        <a href="experiences.html">🇸🇪 Svenska</a>
+                        <a href="../experiences.html">🇺🇸 American English (Amerikansk Engelska)</a>
                     </div>
                 </div>
             </div>
