Started to write the landing site

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
             <div class="constructionBox">
                 <div>
                     <h1>Home</h1>
-                    <p class="checkBack">Please check back later.</p>
-                    <p class="bottomText">This website follows general guidelines for an accessible internet.<br>You
-                        are allowed to copy the source code of this website. You can find it at <a href="https://github.com/actuallyaridan/aridan.net/">GitHub</a></p>
+                    <p class="subTitle">Hi there! You've reached the coolest website on the internet (well maybe not, but I think it's pretty nice)!</p>
+                    <p class="subTitle">This website is a collection of @actuallyaridan's social media accounts, experiences, projects, you name it! If it's a question about him, it's here! <br>And hey, if you need a website as base for yours, feel free to use this one! This website is fully open source. You can visit its GitHub page if you go to the "Projects" page.</p>
+                    <div>
+
+                    </div>
                 </div>
             </div>
         </div>
