--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
                             <p class="projectName">This website (aridan.net)</p>
                             <p class="projectDesc">This is a website that has all my social media links, all my experiences and similar listed. <br>I learned a lot during this project, mainly how to make websites look nice.</p>
                             <div>
-                                <p class="projectStatus WIP">Work in process</p>
+                                <p class="projectStatus WIP">Work in progress</p>
                                 <p class="projectLink">🔗 <a href="https://aridan.net">aridan.net</a></p>
                                 <p class="projectLink">🔗 <a href="https://github.com/actuallyaridan/aridan.net">GitHub</a></p>
                                 <p class="projectLearned">🧑‍🏫 HTML, CSS, JavaScript</p>
@@ -69,7 +69,7 @@
                             <p class="projectName">iPod Video 5th Gen</p>
                             <p class="projectDesc">I have modified this iPod with a transparent click wheel and button along with a transparent faceplate. <br>I've also installed a larger battery and replaced its hard drive with a microSD card.</p>
                             <div>
-                                <p class="projectStatus WIP">Work in process</p>
+                                <p class="projectStatus WIP">Work in progress</p>
                                 <p class="projectLearned">🧑‍🏫 Electronics modification</p>
                             </div>
                         </div>
@@ -77,7 +77,7 @@
                             <p class="projectName">iPod Click Wheel 4th Gen</p>
                             <p class="projectDesc">I have repaired this iPod by replacing its click wheel. <br>I've also upgraded it by replacing its hard drive with a Compact Flash card and I installed a new battery too.</p>
                             <div>
-                                <p class="projectStatus WIP">Work in process</p>
+                                <p class="projectStatus WIP">Work in progress</p>
                                 <p class="projectLearned">🧑‍🏫 Electronics modification</p>
                             </div>
                         </div>
