--- a/sv/index.html
+++ b/sv/index.html
@@ -21,8 +21,7 @@
         <nav>
             <div class="langWrapper">
                 <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Språk
-                        (Language)</button>
+                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Språk (Language)</button>
                     <div id="langDrop" class="dropdownContent">
                         <a href="index.html">🇸🇪 Svenska</a>
                         <a href="../index.html">🇺🇸 American English (Amerikansk Engelska)</a>
@@ -30,21 +29,19 @@
                 </div>
             </div>
             <div class="navWrapper">
-                <a class="navButton activeChoice" href="index.html">🏠 Hem</a>
+                <a class="navButto activeChoice" href="index.html">🏠 Hem</a>
                 <a class="navButton" href="socialmedia.html">💬 Sociala medier</a>
                 <a class="navButton" href="experiences.html">🧠 Erfarenhet</a>
                 <a class="navButton" href="projects.html">🛠️ Projekt</a>
             </div>
             <div class="navWrapperMobile">
-                <div class="navWrapperMobile">
-                    <button onclick="toggleMenu()" class="navButton">＝ Meny</a>
-                </div>
-                <div class="mobileMenu" id="mobileMenuID">
-                    <a class="navButton activeChoice" href="index.html">🏠 Hem</a>
-                    <a class="navButton" href="socialmedia.html">💬 Sociala medier</a>
-                    <a class="navButton" href="experiences.html">🧠 Erfarenhet</a>
-                    <a class="navButton" href="projects.html">🛠️ Projekt</a>
-                </div>
+                <button onclick="toggleMenu()" class="navButton" >＝ Meny</a>
+            </div>
+            <div class="mobileMenu" id="mobileMenuID">
+                <a class="navButton activeChoice" href="index.html">🏠 Hem</a>
+                <a class="navButton" href="socialmedia.html">💬 Sociala medier</a>
+                <a class="navButton" href="experiences.html">🧠 Erfarenhet</a>
+                <a class="navButton" href="projects.html">🛠️ Projekt</a>
             </div>
         </nav>
     </header>
