--- a/sv/index.html
+++ b/sv/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#710a97" />
-    <title>Under konstruktion — actuallyaridan</title>
+    <title>Hem — actuallyaridan</title>
     <link href="../src/styles/styles.css" rel="stylesheet">
     <script src="../src/scripts/dropDownMenu.js"></script>
     <script src="../src/scripts/mobileMenu.js"></script>
