--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <script src="src/scripts/twimojiFix.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#710a97" />
-    <title>Social Media — actuallyaridan</title>
+    <meta name="theme-color" content="#710a97">
+    <title>Contact — actuallyaridan</title>
     <link href="src/styles/styles.css" rel="stylesheet">
     <script src="src/scripts/dropDownMenu.js"></script>
     <script src="src/scripts/mobileMenu.js"></script>
@@ -26,23 +26,23 @@
                 <div class="dropdown">
                     <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Language</button>
                     <div id="langDrop" class="dropdownContent">
-                        <a href="socialmedia.html">🇺🇸 American English</a>
-                        <a href="sv/socialmedia.html">🇸🇪 Svenska (Swedish)</a>
+                        <a href="contact.html">🇺🇸 American English</a>
+                        <a href="sv/contact.html">🇸🇪 Svenska (Swedish)</a>
                     </div>
                 </div>
             </div>
             <div class="navWrapper">
                 <a class="navButton" href="index.html">🏠 Home</a>
-                <a class="navButton activeChoice" href="socialmedia.html">💬 Social Media</a>
+                <a class="navButton activeChoice" href="contact.html">💬 Contact</a>
                 <a class="navButton" href="experiences.html">🧠 Experiences</a>
                 <a class="navButton" href="projects.html">🛠️ Projects</a>
             </div>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton" >＝ Menu</a>
+                <button onclick="toggleMenu()" class="navButton" >＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
                 <a class="navButton" href="index.html">🏠 Home</a>
-                <a class="navButton activeChoice" href="socialmedia.html">💬 Social Media</a>
+                <a class="navButton activeChoice" href="contact.html">💬 Contact</a>
                 <a class="navButton" href="experiences.html">🧠 Experiences</a>
                 <a class="navButton" href="projects.html">🛠️ Projects</a>
             </div>
@@ -52,11 +52,28 @@
         <div class="containerCenterer">
             <div class="constructionBox">
                 <div>
-                    <h1>Social Media</h1>
-                    <p class="checkBack">Please chcek back later.</p>
-                    <p class="bottomText">This website follows general guidelines for an accessible internet.<br>You
-                        are allowed to copy the source code of this website. You can find it at <a href="https://github.com/actuallyaridan/aridan.net/">GitHub</a></p>
-                </div>
+                    <h1>Contact</h1>
+                    <div>
+                        <p class="subTitle">Would you like to talk to me in a one-on-one? Go ahead and send me an email or an iMessage!<br>I'll be more happy to reply and I'm looking forward to talking to speaking with you!</p>
+                        <div class="contactMe"></div>
+                    </div>
+                    <div>
+                        <p class="subTitle">If you're looking to communicate in a more casual manner, I'm on a bunch of social media platforms too. <br>Any platform that isn't linked here is not me.</p>
+                        <div class="socialMedia">
+                            <div>
+                                <a>X (formerly Twitter)</a>
+                            </div>
+                            <div>
+                                <a>Threads (an Instagram app)</a>
+                            </div>
+                            <div>
+                                <a>Instagram</a>
+                            </div>
+                            <div>
+                                <a>Telegram</a>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </div>
     </main>
