--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="src/scripts/twimojiFix.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#710a97" />
+    <meta name="theme-color" content="#710a97">
     <title>Home — actuallyaridan</title>
     <link href="src/styles/styles.css" rel="stylesheet">
     <script src="src/scripts/dropDownMenu.js"></script>
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="navWrapperMobile">
-            <button onclick="toggleMenu()" class="navButton" >＝ Menu</a>
+            <button onclick="toggleMenu()" class="navButton" >＝ Menu</button>
         </div>
         <div class="mobileMenu" id="mobileMenuID">
             <a class="navButton activeChoice" href="index.html">🏠 Home</a>
