--- a/sv/projects.html
+++ b/sv/projects.html
@@ -6,7 +6,7 @@
     <script src="../src/scripts/twimojiFix.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#710a97" />
+    <meta name="theme-color" content="#710a97">
     <title>Projekt — actuallyaridan</title>
     <link href="../src/styles/styles.css" rel="stylesheet">
     <script src="../src/scripts/dropDownMenu.js"></script>
@@ -36,7 +36,7 @@
                 <a class="navButton activeChoice" href="projects.html">🛠️ Projekt</a>
             </div>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton" >＝ Meny</a>
+                <button onclick="toggleMenu()" class="navButton" >＝ Meny</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
                 <a class="navButton" href="index.html">🏠 Hem</a>
