--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
             </div>
             <div class="navWrapper">
                 <a class="navButton" href="index.html">🏠 Home</a>
-                <a class="navButton" href="socialmedia.html">💬 Social Media</a>
+                <a class="navButton" href="contact.html">💬 Contact</a>
                 <a class="navButton" href="experiences.html">🧠 Experiences</a>
                 <a class="navButton activeChoice" href="projects.html">🛠️ Projects</a>
             </div>
@@ -42,7 +42,7 @@
             </div>
             <div class="mobileMenu" id="mobileMenuID">
                 <a class="navButton" href="index.html">🏠 Home</a>
-                <a class="navButton" href="socialmedia.html">💬 Social Media</a>
+                <a class="navButton" href="contact.html">💬 Contact</a>
                 <a class="navButton" href="experiences.html">🧠 Experiences</a>
                 <a class="navButton activeChoice" href="projects.html">🛠️ Projects</a>
             </div>
