--- a/experiences.html
+++ b/experiences.html
@@ -34,7 +34,7 @@
             </div>
             <div class="navWrapper">
                 <a class="navButton" href="index.html">🏠 Home</a>
-                <a class="navButton" href="socialmedia.html">💬 Social Media</a>
+                <a class="navButton" href="contact.html">💬 Contact</a>
                 <a class="navButton activeChoice" href="experiences.html">🧠 Experiences</a>
                 <a class="navButton" href="projects.html">🛠️ Projects</a>
             </div>
@@ -43,7 +43,7 @@
             </div>
             <div class="mobileMenu" id="mobileMenuID">
                 <a class="navButton" href="index.html">🏠 Home</a>
-                <a class="navButton" href="socialmedia.html">💬 Social Media</a>
+                <a class="navButton" href="contact.html">💬 Contact</a>
                 <a class="navButton activeChoice" href="experiences.html">🧠 Experiences</a>
                 <a class="navButton" href="projects.html">🛠️ Projects</a>
             </div>
