Added content to Contact page

--- a/contact.html
+++ b/contact.html
@@ -55,22 +55,28 @@
                     <h1>Contact</h1>
                     <div>
                         <p class="subTitle">Would you like to talk to me in a one-on-one? Go ahead and send me an email or an iMessage!<br>I'll be more happy to reply and I'm looking forward to talking to speaking with you!</p>
-                        <div class="contactMe"></div>
+                        <div class="contactMe">
+                            <div class="socialMedias">
+                            <div>
+                                <a class="socialMedia email" href="https://www.instagram.com/actuallyaridan/">Show email address</a>
+                            </div>
+                            <div>
+                                <a class="socialMedia imessage" href="https://www.instagram.com/actuallyaridan/">Send an iMessage</a>
+                            </div>
+                            </div>
+                        </div>
                     </div>
                     <div>
                         <p class="subTitle">If you're looking to communicate in a more casual manner, I'm on a bunch of social media platforms too. <br>Any platform that isn't linked here is not me.</p>
-                        <div class="socialMedia">
+                        <div class="socialMedias">
                             <div>
-                                <a>X (formerly Twitter)</a>
+                                <a class="socialMedia twitter" href="https://x.com/@actuallyaridan">X (formerly Twitter)</a>
                             </div>
                             <div>
-                                <a>Threads (an Instagram app)</a>
+                                <a class="socialMedia threads" href="https://www.threads.net/@actuallyaridan">Threads (an Instagram app)</a>
                             </div>
                             <div>
-                                <a>Instagram</a>
-                            </div>
-                            <div>
-                                <a>Telegram</a>
+                                <a class="socialMedia instagram" href="https://www.instagram.com/actuallyaridan/">Instagram</a>
                             </div>
                         </div>
                     </div>
