--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                 <div>
                     <h1>Contact</h1>
                     <div>
-                        <p class="subTitle">Would you like to talk to me in a one-on-one? Go ahead and send me an email or an iMessage!<br>I'll be more happy to reply and I'm looking forward to talking to speaking with you!</p>
+                        <p class="subTitle">Would you like to talk to me in a one-on-one? Go ahead and send me an email or an iMessage!<br>I'll be more than happy to reply and I'm looking forward to speaking with you!</p>
                         <div class="contactMe">
                             <div class="socialMedias">
                             <div>
