Added an iMessage link that will eventually work

--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                                 <a class="socialMedia email" href="https://www.instagram.com/actuallyaridan/">Show email address</a>
                             </div>
                             <div>
-                                <a class="socialMedia imessage" href="https://www.instagram.com/actuallyaridan/">Send an iMessage</a>
+                                <a class="socialMedia imessage" href="sms:adnan@aridan.net">Send an iMessage</a>
                             </div>
                             </div>
                         </div>
