--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -25,7 +25,7 @@
                     <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Språk (Language)</button>
                     <div id="langDrop" class="dropdownContent">
                         <a href="experiences.html">🇸🇪 Svenska</a>
-                        <a href="../experiences.html">🇺🇸 American English (Amerikansk Engelska)</a>
+                        <a href="../experiences.html">🇺🇸/🇬🇧 English (Engelska)</a>
                     </div>
                 </div>
             </div>
