--- a/experiences.html
+++ b/experiences.html
@@ -27,7 +27,7 @@
                 <div class="dropdown">
                     <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Language</button>
                     <div id="langDrop" class="dropdownContent">
-                        <a href="experiences.html">🇺🇸 American English</a>
+                        <a href="experiences.html">🇺🇸/🇬🇧 English</a>
                         <a href="sv/experiences.html">🇸🇪 Svenska (Swedish)</a>
                     </div>
                 </div>
