--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
                 <div class="dropdown">
                     <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Language</button>
                     <div id="langDrop" class="dropdownContent">
-                        <a href="projects.html">🇺🇸 American English</a>
+                        <a href="projects.html">🇺🇸/🏴󠁧🇬🇧 English</a>
                         <a href="sv/projects.html">🇸🇪 Svenska (Swedish)</a>
                     </div>
                 </div>
